Fix overflow-x issue

--- a/styles.scss
+++ b/styles.scss
@@ -30,7 +30,7 @@
 
 html {
   scroll-behavior: smooth;
-  //overflow-x: hidden;
+  overflow-x: hidden;
   overflow-y: scroll;
 
 }
