--- a/styles/_menu.scss
+++ b/styles/_menu.scss
@@ -4,7 +4,7 @@
 .menu-wrapper {
   @include mobile-grid;
   @include menu-background;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 100vw;
   bottom: 0;
