--- a/styles/_work.scss
+++ b/styles/_work.scss
@@ -53,7 +53,7 @@
       background-position: center;
       background-repeat: no-repeat;
       background-size: 80%;
-      opacity: .5;
+      opacity: .4;
       transform: rotate(45deg);
     }
 
